...
            Row(modifier = Modifier.fillMaxWidth(), verticalAlignment = Alignment.CenterVertically) {
                Image(
                    painter = painterResource(AppIcons.IcBackwardArrow), contentDescription = null,
                    modifier = Modifier.size(20.dp).clickable { onBack() }
                )
                Text(
                    text = "Chọn danh mục", style = NestoryTextStyles.Title20Semi,
                    modifier = Modifier.weight(1f), textAlign = androidx.compose.ui.text.style.TextAlign.Center
                )
                Image(
                    painter = painterResource(AppIcons.GridiconsCross), contentDescription = null,
                    modifier = Modifier.size(24.dp).clickable { onBack() }
                )
...
